# waapi_rust

./: Cargo.toml
src/: main.rs
src/libs/: ak_wwise_core_getProjectInfo.rs  ak_wwise_ui_getSelectedObjects.rs
